# GorillaEngine

./: CMakeLists.txt  geom.cpp  geom.hpp  main.cpp  shader.frag  shader.vert  smallapplication.cpp  smallapplication.hpp
libs/error_handling/: CMakeLists.txt
libs/error_handling/docs/: CMakeLists.txt
libs/error_handling/include/error_handling/: assert.hpp  error_handling.hpp  exceptions.hpp
libs/error_handling/src/: CMakeLists.txt  assert.cpp
libs/error_handling/tests/: CMakeLists.txt
libs/glfw_cpp/: CMakeLists.txt
libs/glfw_cpp/include/glfw_cpp/: glfw.hpp  library.hpp  monitor.hpp  vulkan_glue.hpp  window.hpp  windowhints.hpp
libs/glfw_cpp/src/: CMakeLists.txt  library.cpp  monitor.cpp  vulkan_glue.cpp  window.cpp
libs/glfw_cpp/tests/: CMakeLists.txt
libs/vulkan_renderer/include/vulkan_renderer/: aos_mesh_primitive.hpp  boilerplate.hpp  context.hpp  device_memory_manager.hpp  display.hpp  drawable.hpp  environment.hpp  frame.hpp  instance.hpp  material.hpp  physical_device.hpp  primitive.hpp  renderpass.hpp  shader.hpp  simple_geometry.hpp  surface.hpp  swapchain.hpp
libs/vulkan_renderer/src/: aos_mesh_primitive.cpp  context.cpp  device_memory_manager.cpp  display.cpp  environment.cpp  instance.cpp  material.cpp  physical_device.cpp  renderpass.cpp  shader.cpp  simple_geometry.cpp  surface.cpp  swapchain.cpp
src/debugging/: debugging.hpp  log.cpp  log.hpp
src/error_handling/: assert.cpp  assert.hpp  exceptions.hpp
src/glfw_cpp/: glfw.cpp  glfw.hpp  library.cpp  library.hpp  monitor.cpp  monitor.hpp  vulkan_glue.cpp  vulkan_glue.hpp  window.cpp  window.hpp  windowhints.hpp
src/platform/: build.hpp  common.hpp  ver.hpp
src/utility/: reference_ptr.hpp
src/vulkan_renderer/: display.cpp  display.hpp  environment.cpp  environment.hpp
